--- a/Tarea_3_Jose_Lopez.html
+++ b/Tarea_3_Jose_Lopez.html
@@ -15172,8 +15172,8 @@ class="
     <span class="n">m_list</span> <span class="o">=</span> <span class="p">[]</span>
 
 <span class="n">tab</span> <span class="o">=</span> <span class="n">tab</span><span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">index</span><span class="o">=</span><span class="p">{</span><span class="mi">0</span><span class="p">:</span><span class="s1">&#39;Grupo A&#39;</span><span class="p">,</span> <span class="mi">1</span><span class="p">:</span><span class="s1">&#39;Grupo B&#39;</span><span class="p">,</span> <span class="mi">2</span><span class="p">:</span><span class="s1">&#39;Grupo C&#39;</span><span class="p">,</span> <span class="mi">3</span><span class="p">:</span> <span class="s1">&#39;Grupo D&#39;</span><span class="p">})</span>
-<span class="n">tab</span> <span class="o">=</span> <span class="n">tab</span><span class="o">.</span><span class="n">transpose</span><span class="p">()</span>       
-<span class="n">tab</span>
+<span class="n">tab</span> <span class="o">=</span> <span class="n">tab</span><span class="o">.</span><span class="n">transpose</span><span class="p">()</span>     
+<span class="n">tab</span><span class="o">.</span><span class="n">to_html</span><span class="p">()</span>  
 </pre></div>
 
      </div>
@@ -15193,105 +15193,9 @@ class="
 
 
 
-<div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html">
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
 
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>Grupo A</th>
-      <th>Grupo B</th>
-      <th>Grupo C</th>
-      <th>Grupo D</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>BALANCE</th>
-      <td>1129.888583</td>
-      <td>140.353278</td>
-      <td>4939.826865</td>
-      <td>3647.719772</td>
-    </tr>
-    <tr>
-      <th>PURCHASES</th>
-      <td>577.975010</td>
-      <td>1260.415818</td>
-      <td>649.830115</td>
-      <td>7899.362605</td>
-    </tr>
-    <tr>
-      <th>ONEOFF_PURCHASES</th>
-      <td>335.898823</td>
-      <td>615.089942</td>
-      <td>396.697157</td>
-      <td>5182.931605</td>
-    </tr>
-    <tr>
-      <th>INSTALLMENTS_PURCHASES</th>
-      <td>242.380574</td>
-      <td>645.411968</td>
-      <td>253.242498</td>
-      <td>2718.009947</td>
-    </tr>
-    <tr>
-      <th>CASH_ADVANCE</th>
-      <td>504.946350</td>
-      <td>91.438544</td>
-      <td>4730.719045</td>
-      <td>616.828279</td>
-    </tr>
-    <tr>
-      <th>CASH_ADVANCE_TRX</th>
-      <td>2.072961</td>
-      <td>0.319826</td>
-      <td>13.565988</td>
-      <td>2.000000</td>
-    </tr>
-    <tr>
-      <th>PURCHASES_TRX</th>
-      <td>9.777980</td>
-      <td>18.833575</td>
-      <td>9.843224</td>
-      <td>92.834211</td>
-    </tr>
-    <tr>
-      <th>CREDIT_LIMIT</th>
-      <td>3377.083312</td>
-      <td>4812.013660</td>
-      <td>8389.906595</td>
-      <td>9579.078947</td>
-    </tr>
-    <tr>
-      <th>PAYMENTS</th>
-      <td>1006.541764</td>
-      <td>1549.206204</td>
-      <td>3928.326433</td>
-      <td>7468.197136</td>
-    </tr>
-    <tr>
-      <th>PRC_FULL_PAYMENT</th>
-      <td>0.035399</td>
-      <td>0.746331</td>
-      <td>0.035366</td>
-      <td>0.236692</td>
-    </tr>
-  </tbody>
-</table>
-</div>
+<div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
+<pre>&#39;&lt;table border=&#34;1&#34; class=&#34;dataframe&#34;&gt;\n  &lt;thead&gt;\n    &lt;tr style=&#34;text-align: right;&#34;&gt;\n      &lt;th&gt;&lt;/th&gt;\n      &lt;th&gt;Grupo A&lt;/th&gt;\n      &lt;th&gt;Grupo B&lt;/th&gt;\n      &lt;th&gt;Grupo C&lt;/th&gt;\n      &lt;th&gt;Grupo D&lt;/th&gt;\n    &lt;/tr&gt;\n  &lt;/thead&gt;\n  &lt;tbody&gt;\n    &lt;tr&gt;\n      &lt;th&gt;BALANCE&lt;/th&gt;\n      &lt;td&gt;1129.888583&lt;/td&gt;\n      &lt;td&gt;140.353278&lt;/td&gt;\n      &lt;td&gt;4939.826865&lt;/td&gt;\n      &lt;td&gt;3647.719772&lt;/td&gt;\n    &lt;/tr&gt;\n    &lt;tr&gt;\n      &lt;th&gt;PURCHASES&lt;/th&gt;\n      &lt;td&gt;577.975010&lt;/td&gt;\n      &lt;td&gt;1260.415818&lt;/td&gt;\n      &lt;td&gt;649.830115&lt;/td&gt;\n      &lt;td&gt;7899.362605&lt;/td&gt;\n    &lt;/tr&gt;\n    &lt;tr&gt;\n      &lt;th&gt;ONEOFF_PURCHASES&lt;/th&gt;\n      &lt;td&gt;335.898823&lt;/td&gt;\n      &lt;td&gt;615.089942&lt;/td&gt;\n      &lt;td&gt;396.697157&lt;/td&gt;\n      &lt;td&gt;5182.931605&lt;/td&gt;\n    &lt;/tr&gt;\n    &lt;tr&gt;\n      &lt;th&gt;INSTALLMENTS_PURCHASES&lt;/th&gt;\n      &lt;td&gt;242.380574&lt;/td&gt;\n      &lt;td&gt;645.411968&lt;/td&gt;\n      &lt;td&gt;253.242498&lt;/td&gt;\n      &lt;td&gt;2718.009947&lt;/td&gt;\n    &lt;/tr&gt;\n    &lt;tr&gt;\n      &lt;th&gt;CASH_ADVANCE&lt;/th&gt;\n      &lt;td&gt;504.946350&lt;/td&gt;\n      &lt;td&gt;91.438544&lt;/td&gt;\n      &lt;td&gt;4730.719045&lt;/td&gt;\n      &lt;td&gt;616.828279&lt;/td&gt;\n    &lt;/tr&gt;\n    &lt;tr&gt;\n      &lt;th&gt;CASH_ADVANCE_TRX&lt;/th&gt;\n      &lt;td&gt;2.072961&lt;/td&gt;\n      &lt;td&gt;0.319826&lt;/td&gt;\n      &lt;td&gt;13.565988&lt;/td&gt;\n      &lt;td&gt;2.000000&lt;/td&gt;\n    &lt;/tr&gt;\n    &lt;tr&gt;\n      &lt;th&gt;PURCHASES_TRX&lt;/th&gt;\n      &lt;td&gt;9.777980&lt;/td&gt;\n      &lt;td&gt;18.833575&lt;/td&gt;\n      &lt;td&gt;9.843224&lt;/td&gt;\n      &lt;td&gt;92.834211&lt;/td&gt;\n    &lt;/tr&gt;\n    &lt;tr&gt;\n      &lt;th&gt;CREDIT_LIMIT&lt;/th&gt;\n      &lt;td&gt;3377.083312&lt;/td&gt;\n      &lt;td&gt;4812.013660&lt;/td&gt;\n      &lt;td&gt;8389.906595&lt;/td&gt;\n      &lt;td&gt;9579.078947&lt;/td&gt;\n    &lt;/tr&gt;\n    &lt;tr&gt;\n      &lt;th&gt;PAYMENTS&lt;/th&gt;\n      &lt;td&gt;1006.541764&lt;/td&gt;\n      &lt;td&gt;1549.206204&lt;/td&gt;\n      &lt;td&gt;3928.326433&lt;/td&gt;\n      &lt;td&gt;7468.197136&lt;/td&gt;\n    &lt;/tr&gt;\n    &lt;tr&gt;\n      &lt;th&gt;PRC_FULL_PAYMENT&lt;/th&gt;\n      &lt;td&gt;0.035399&lt;/td&gt;\n      &lt;td&gt;0.746331&lt;/td&gt;\n      &lt;td&gt;0.035366&lt;/td&gt;\n      &lt;td&gt;0.236692&lt;/td&gt;\n    &lt;/tr&gt;\n  &lt;/tbody&gt;\n&lt;/table&gt;&#39;</pre>
 </div>
 
 </div>
